fix: resolve critical preprocessing bugs and enhance Streamlit UI
- Fixed csv_preprocessor log1p transform bug
- Fixed scaler path alignment across modules
- Fixed csv_runner ROOT path bug
- Enhanced Streamlit UI with progress indicators
- Added prediction summary dashboard
- Improved error handling for SHAP explanations

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ pip-wheel-metadata/
 dist/
 build/
 
+# Debug and test files
+debug*.py
+test_*.py
+*_test.py
+*.log
+
 # =====================================================
 # Jupyter / Experiments
 # =====================================================
@@ -51,6 +57,11 @@ models/artifacts/shap_explainer.pkl
 # Streamlit cache
 # =====================================================
 .streamlit/
+
+# =====================================================
+# Claude Code CLI
+# =====================================================
+.claude/
 
 # =====================================================
 # IDEs
