fix: relocate transforms.json to models/artifacts and retrain pipeline
- Update transform_and_scale.py to save transforms.json directly to models/artifacts/
- Update config.yaml with correct transforms_path
- Remove deprecated transforms.json from preprocessor/
- Retrain all models with corrected artifact paths (Binary: 99.92%, Attack: 99.61%)
- Update autoencoder files to use consistent naming (.pth, .json)
- Clean up deprecated artifact files (old scaler, feature_order files)

This ensures transforms.json is created in the correct location during
preprocessing, eliminating manual file copying and aligning with model_loader expectations.

--- a/preprocessor/config.yaml
+++ b/preprocessor/config.yaml
@@ -34,7 +34,7 @@ min_unique_for_log: 3             # min distinct positive values to consider log
 
 # Output artifacts
 percentiles_path: "preprocessor/percentiles.json"
-transforms_path: "preprocessor/transforms.json"
+transforms_path: "models/artifacts/transforms.json"
 scaler_artifact: "models/artifacts/robust_scaler.joblib"
 
 # Which file pattern to write transformed data (parquet parts)
